# gertrude

./: .gitignore  Cargo.toml  Justfile  README.md  TODO.md  apko.yaml  build.rs  deny.toml  melange.yaml  rustfmt.toml
.github/workflows/: test.yaml
admin/: healthz.sh  karma_set.sh  metrics.sh  plugins_list.sh
api/proto/admin/v1/: karma.proto  plugins.proto
api/wasm/: plugin.wai
idl/api/proto/admin/v1/: karma.proto  plugins.proto
idl/internal/wasm/: plugin.wai
idl/storage/proto/v1/: karma.proto
src/: admin.rs  chatbot.rs  http_srv.rs  karma.rs  main.rs  metrics.rs  plugins.rs
