[package]
name = "gertrude"
version = "0.1.0"
edition = "2021"
repository = "http://github.com/mt-inside/gertrude"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
nom = "7"
nom-unicode = "0.3"
irc = { version = "0.15", features=["ctcp"] } # "tls-rust"
futures = "0.3"
tokio = { version= "1.32", features=["full"] }
unicase = "2.7"
maplit = "1.0"

[profile.release]
strip = true
#opt-level = "z"  # Optimize for size.
lto = true # Link-Time Optimisation, eg dead code removal.
codegen-units = 1
