[package]
name = "gertrude"
description = "botten gertrude"
version = "0.1.1"
edition = "2021"
repository = "http://github.com/mt-inside/gertrude"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
nom = "7"
nom-unicode = "0.3"
irc = { version = "0.15", default-features=false, features=["ctcp", "tls-rust"] }
futures = "0.3"
tokio = { version= "1.32", features=["full"] }
tokio-util = { version= "0.7.10" }
tokio-graceful-shutdown = "0.13"
unicase = "2.7"
maplit = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
actix-web = "4.4"
miette = { version = "5.10", features = ["fancy"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12" # Protobuf well-known types, inc the google ones
wasmer = "4.1"
wai-bindgen-wasmer = "0.12.0"
notify = "6"
notify-debouncer-full = "0.3"
bytes = "1.4"
async-trait = "0.1.73"

[build-dependencies]
tonic-build = "0.10"

[profile.release]
strip = true
#opt-level = "z"  # Optimize for size.
lto = true # Link-Time Optimisation, eg dead code removal.
codegen-units = 1
